welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:-6: error: Missing closing brace `}' assumed here
try {
^shareDigit:1: error: expected class or object definition
def shareDigit(a:Int, b:Int):Boolean = {
^